# turbo-turtle

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pipeline-win.yml  CITATION.bib  CITATION.cff  DEPLOY.sh  MANIFEST.in  README.md  README.rst  SConstruct  cProfile  cProfile.py  cProfile.scons  conda-build.yml  environment.yml  import_package.py  import_turbo_turtle.py  mypy.scons  package_documentation.py  pip-build.yml  pip-upload.yml  profile_package.py  profiles.py  pyproject.toml  pytest  pytest.scons  static-type-check.yml  style  style.scons  style.yml  systemtests  test_geometry.py  tests.py  tests_geometry.py  tests_main.py  tests_partition.py  turboTurtle.py  unittests
.github/workflows/: pages.yml  release.yml  tests.yml
docs/: SConscript  api.rst  changelog.rst  cli.rst  conf.py.in  devops.rst  external_api.rst  gui.rst  index.rst  installation.rst  internal_api.rst  man_index.rst  references.bib  release_philosophy.rst  targets.txt  user.rst
modulefiles/: turbo-turtle-dev
recipe/: bld.bat  build.sh  meta.yaml  recipe.yaml  run_test.bat  run_test.sh
recipe-internal/: bld.bat  build.sh  meta.yaml  recipe.yaml  run_test.bat  run_test.sh
recipe-matrix/: matrix.py  meta.yaml  recipe.yaml
turbo_turtle/: .coveragerc  __init__.py  _abaqus.py  _abaqus_wrappers.py  _cubit_python.py  _cubit_wrappers.py  _docs.py  _export.py  _fetch.py  _geometry.py  _gmsh_python.py  _gmsh_wrappers.py  _image.py  _main.py  _merge.py  _mesh.py  _partition.py  _settings.py  _sphere.py  _utilities.py  _wrappers.py  conftest.py  geometry_xyplot.py  main.py  scons_extensions.py
turbo_turtle/_abaqus_python/: _abaqus_utilities.py  _cylinder.py  _export.py  _geometry.py  _image.py  _merge.py  _mesh.py  _mixed_utilities.py  _parsers.py  _partition.py  _sphere.py  _turbo_turtle_plugin.py  _utilities.py  cylinder.py  export.py  geometry.py  image.py  lines_and_splines.py  merge.py  mesh.py  parsers.py  partition.py  pyproject.toml  sphere.py  test_abaqus_utilities.py  test_mixed_utilities.py  test_parsers.py  test_utilities.py  test_vertices.py  turbo_turtle_plugin.py  vertices.py
turbo_turtle/_abaqus_python/turbo_turtle_abaqus/: _abaqus_utilities.py  _mixed_settings.py  _mixed_utilities.py  cylinder.py  export.py  geometry.py  image.py  merge.py  mesh.py  mesh_module.py  parsers.py  partition.py  sets.py  sphere.py  test_abaqus_utilities.py  test_mixed_utilities.py  test_parsers.py  test_vertices.py  vertices.py
turbo_turtle/_tests/: SConstruct  legacy_geometry.py  test_cubit_python.py  test_fetch.py  test_geometry_xyplot.py  test_main.py  test_mixed_utilities.py  test_scons_extensions.py  test_system.py  test_utilities.py  test_wrappers.py
turbo_turtle/tests/: SConstruct  legacy_geometry.py  test_abaqus_python_utilities.py  test_abaqus_wrappers.py  test_cubit_python.py  test_cubit_wrappers.py  test_docs.py  test_fetch.py  test_geometry_xyplot.py  test_lines_and_splines.py  test_main.py  test_mixed_python_utilities.py  test_mixed_utilities.py  test_parsers.py  test_scons_extensions.py  test_system.py  test_systemtest.py  test_utilities.py  test_vertices.py  test_wrappers.py  tests_geometry.py  tests_partition.py
turbo_turtle/tutorials/: SConscript  SConstruct
