[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2,<8"]
build-backend = "setuptools.build_meta"

[project]
name = "turbo_turtle"
authors = [
    {name = "Kyle Brindley", email = "kbrindley@lanl.gov"},
    {name = "Thomas Roberts", email = "tproberts@lanl.gov"},
]
description = "Partition hollow, spherical bodies using a turtle shell"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]
dynamic = ["version"]
dependencies = [
    "lazy_loader >=0.4",
    "waves >=0.7.2",
    "scons >=4"
]

[tool.setuptools]
packages = [
    "turbo_turtle",
    "turbo_turtle.tests",
    "turbo_turtle.tutorials",
    "turbo_turtle._abaqus_python",
    "turbo_turtle._abaqus_python.turbo_turtle_abaqus"
]
zip-safe = false

[project.scripts]
turbo-turtle = "turbo_turtle._main:main"

[project.urls]
homepage = "https://re-git.lanl.gov/aea/python-projects/turbo-turtle"
documentation = "https://aea.re-pages.lanl.gov/python-projects/turbo-turtle"
repository = "https://re-git.lanl.gov/aea/python-projects/turbo-turtle"
changelog = "https://aea.re-pages.lanl.gov/python-projects/turbo-turtle/changelog.html"

[tool.setuptools_scm]
write_to = "turbo_turtle/_version.py"

[tool.pytest.ini_options]
markers = ["systemtest"]
addopts = "--ignore=turbo_turtle/_abaqus_python --tb=long --showlocals --failed-first --strict-markers"

[tool.mypy]
disable_error_code = [
    "import-untyped",
    "import-not-found"
]
exclude = [
    "tests",
    "_abaqus_python"
]
packages = ["turbo_turtle"]
